# bigdft-suite

./: .gitignore  .gitlab-ci.yml  Installer.py  Makefile  bigdft.modules  conf.py  developers.rst  difference  distfiles  glib3.patch  gnome.modules  index.rst  installation.rst  requirements.txt  sphinxprebuild.py  users.rst  v_sim-dev.patch  v_sim-dev.tar.bz2  yaml-doxygen-in.patch
PyBigDFT/: .gitrepo  MANIFEST.in
PyBigDFT/BigDFT/: Atom.py  BZ.py  Calculators.py  Datasets.py  DoS.py  Fragments.py  InputActions.py  Inputfiles.py  Logfiles.py  PostProcessing.py  Spillage.py  XYZ.py  wahba.py
PyBigDFT/BigDFT/Database/: Molecules.py  (+1 more)
PyBigDFT/source/: conf.py  docGeneration.rst  index.rst  requirements.txt  tutorials.rst
atlab/: .gitignore  .gitlab-ci.yml  .gitrepo  Makefile.am  README  atlab.pc.in  configure.ac
atlab/debian/: changelog  control  rules
atlab/debian/source/: options
atlab/m4/: babel.m4
atlab/src/: IObox.f90  IOetsf.f90  IOetsf_fake.f90  ISF.f90  Makefile.am  box.f90  domain.f90  f_functions.f90  harmonics.f90  mp_quadrature.f90  openbabel.cpp  openbabel_wrapper.f90
atlab/tests/: Makefile.am  babel.f90  babel.ref.yaml  domain.yaml  numerics_check.f90  numerics_check.ref.yaml  tols.yaml
bigdft/: .gitrepo  Makefile.am  bigdft.pc.in  configure.ac
bigdft/plugins/: Makefile.am
bigdft/src/: BigDFT.f90  BigDFT2Wannier.f90  ConstrainedDavidson.f90  Makefile.am  WaCo.f90  abscalc.f90  abscalc_init.f90  abscalc_module.f90  bigdft-tool.in  cluster.f90  davidson.f90  distances.f90  forces.f90  frequencies.f90  hpsiortho.f90  init.f90  input_variables_definition.yaml  interface_ocl.f90  lanczos_interface.f90  memguess.f90  output.f90  pdos.f90  restart.f90  sandbox.f90  sumrho.f90  tail.f90  tddft.f90  utilities.f90
bigdft/tests/: Makefile.am  check.mk  tols-BigDFT.yaml
bigdft/tests/libs/: Makefile.am  PS_Check.f90  check.mk
bigdft/tests/libs/IO-wf/: Makefile.am  check_lib.f90
bigdft/tests/libs/OP2P/: Makefile.am
bigdft/tests/libs/OpenCL/: Makefile.am
bigdft/tests/libs/coordinatetransform/: Makefile.am
bigdft/tests/libs/dsygv/: Makefile.am
bigdft/tests/libs/ftypes/: Makefile.am
bigdft/tests/libs/overlapgeneral/: Makefile.am
bigdft/tests/libs/psp/: Makefile.am  check_psp.f90
bigdft/tests/libs/wrappers/: Makefile.am  babel.f90  initialization.f90  kinetic_operator.f90  libconv.f90  locreg_test.f90  projection.f90
bigdft/tests/libs/xc/: Makefile.am
bigdft/tests/libs/xcPSolver/: Makefile.am  PS_Integral.f90  gaussdaub.f90  gaussian3D.f90
bundler/: .gitrepo  jhbuild.py
bundler/jhbuild/: defaults.jhbuildrc
chess/: Makefile.am  configure.ac
chess/chesspexsi/: Makefile.am  pexsi.f90  selinv.f90
chess/libsiesta/: Makefile.am  basic_type.inc  class_OrbitalDistribution.F90  class_Sparsity.F90  m_die.F90  m_pivot_methods.F90  m_region.F90
chess/m4/: atlab.m4  etsfio.m4  suitepkg.m4
chess/sparsematrix/: Makefile.am  parallel_linalg.f90  sparsematrix.f90  sparsematrix_base.f90  sparsematrix_defs.f90  sparsematrix_init.f90  sparsematrix_io.f90  sparsematrix_memory.f90  sparsematrix_timing.f90  sparsematrix_types.f90
chess/src/: Makefile.am  chebyshev.f90  chess_base.f90  chess_input_variables_definition.yaml  chess_toolbox.f90  coeffs.f90  fermi_level.f90  foe.f90  foe_base.f90  foe_common.f90  highlevel_wrappers.f90  ice.f90  matrix_operations.f90  minpack.f90  sparsematrix_highlevel.f90
chess/tests/: Makefile.am  driver_ccs.f90  driver_eigenvalues.f90  driver_foe.f90  driver_foe.ref.yaml  driver_random.f90  driver_random.ref.yaml  driver_single.f90  fermi_level.ref.yaml  small_programs.f90  smatmul.f90  tols.yaml  utilities.f90
doc/: conf.py  overview.rst  sphinxprebuild.py  users.rst
futile/: .gitignore  .gitlab-ci.yml  .gitrepo  Makefile-sphinx  Makefile.am  conf.py  configure.ac  futile_environment.sh.in  index.rst  requirements.txt
futile/c-bindings/: Makefile.am  dictf.f90  futile.h
futile/debian/: control
futile/dicts/: Makefile.am  callbacks.f90  dict.c  dict.h  dict_add-inc.f90  dictf.f90  dictionaries.f90  dictionaries_base.f90  error_handling.f90  yaml_strings.f90
futile/flib/: Makefile.am  allocate-aligned-inc.f90  allocate-inc-base.f90  allocation-validation-inc.f90  deallocate-inc.f90  deallocate-ptr-inc.f90  dynamic_memory.f90  f_arrays.f90  f_malloc.f90  f_memcpy-base-inc.f90  f_memcpy-inc.f90  f_utils.f90  getadd.f90  malloc_templates-inc.f90  override_malloc.c  performances.f90  randomData.f90  utils.c  utilsadd.c  yaml_output.f90  yaml_parse.f90
futile/source/: conf.py  f_prec.rst  index.rst  pyfutile.rst  yaml_parse.rst  yaml_str.rst
futile/src/: Makefile.am
futile/tests/: InputVariablesTest.ipynb  Makefile.am  fldiff_yaml.py.in
futile/tests/dicts/: Makefile.am  err.c
futile/wrappers/: Makefile.am  alltoallv-inc.f90  box.f90  domain.f90  f_functions.f90  harmonics.f90  mpi.F90  mpi_get_alltoallv-inc.f90  numerics.f90  op2p_module.f90  test_mpi_wrappers.f90
jhbuild/: defaults.jhbuildrc  main.py
jhbuild/modtypes/: autotools.py  distutils.py
libABINIT/: configure.ac
libABINIT/m4/: pic.m4
m4/: babel.m4  flib.m4  suitepkg.m4
psolver/: .gitignore  .gitlab-ci.yml  .gitrepo  Makefile.am  configure.ac  psolver_environment.sh.in  psolvervars.sh.in
psolver/debian/: changelog  control  rules
psolver/doc/: Makefile.am
psolver/src/: Build_Kernel.f90  FDder.f90  IObox.f90  Makefile.am  PSbox.f90  PSolver_Base_new.f90  PSolver_Main.f90  PStypes.f90  conv_check_fft.f90  conv_check_fftw.f90  createKernel.f90  cufft.cu  environment.f90  exctx_calculation.f90  mp_quadrature.f90  scaling_function.f90
psolver/tests/: Fock.f90  GPS_PCG.ref.yaml  Generalized_PSolver.f90  Makefile.am  PS_Basics.ref.yaml  PS_Check.f90  PS_Check.ref.yaml  PS_Exercise.f90  PS_Program.f90  PS_StressCheck.f90  PS_StressCheck_angchange.f90  PSolver_examples.f90  PSolver_examples_old.f90  functions.f90  tols.yaml
rcfiles/: container-vsim.rc  container.rc  irene.rc  jhbuildrc  k_computer.rc  macos_gcc.rc  macos_gcc_ntpoly.rc  summer.rc
spred/src/: Makefile.am  global.f90  images.f90
src/: hpsiortho.f90
(+364 files in other folders)
